Check available equipment